products_db.js finished
